fixed overflow and pinned chat to bottom of window

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
-body {
-  margin: 0.25rem;
+html,
+body,
+#root,
+.container {
+  height: 100%;
+}
+
+.container {
+  padding: 0.25em;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
